Version 0.21 - 2016-08-09
* Add python 3 support

Version 0.20 - 2016-05-10
* Add support for AEAT 182 Model

Version 0.19 - 2016-03-17
* CSB 43 - Bank office is null + Concept Bank are characters
* Fix intracommunitary record for 340 report

Version 0.18 - 2016-01-21
* Raise RetrofixException instead of BaseException or Exception
* Inherit RetrofixException from Exception to follow documentation guidelines

Version 0.17 - 2016-01-14
* Fix length of 'total' field of Presenter Header record of 340

Version 0.16 - 2015-12-21
* Fix invalid configuration of aeat340 records

Version 0.15 - 2015-12-18
* Add missing fields in aeat340 records

Version 0.14 - 2015-12-10
* Fix amount position of PROPERTY_RECORD of aeat347
* Put a white space in sign position for values in 347 and 340

Version 0.13 - 2015-10-21
* Allow to build doc using 'python setup.py build_sphinx'

Version 0.12 - 2015-10-21
* Add C57
* Add new boolean format with '1' and whitespace
* Allow to run tests with 'python setup.py test'

Version 0.11 - 2015-10-07
* Fill char fields with spaces is it's length is less than the expected

Version 0.10 - 2015-09-28
* Update 303 model

Version 0.9 - 2015-02-12
* Added fields community_vat, cash_vat_operation, tax_person_operation,
related_goods_operation and cash_vat_criteria according with modifications made
by Order HAP/1732/2014, of september 24th, B.O.E. 234 of september 26th of 2014

Version 0.8 - 2014-09-23
* Cut char fields if value is longer than size
* Adapt to new changes in model CSB303

Version 0.7 - 2014-02-27

Version 0.2 - 2013-11-15
* CSB43 fixes

Version 0.1 - 2013-09-24
* Initial release